--- a/papers/final.org
+++ b/papers/final.org
@@ -1,53 +1,75 @@
 * Misfittings: Social Annotation with Colors
-/Two things to note about this draft before jumping in... First, this
-is a paper about an annotation tool that I'm developing for teaching
-purposes. That being said, I don't have any information about using
-this tool to teach, because I haven't been able to deploy it in the
-classroom yet---for reasons I will explain in class. Second, I'm
-including a narrative of my development on the tool, in the form of
-"journal entries" from my development notes, which are scattered
-throughout the essay. At this point, I'm not sure how else to
-incorporate a narrative of my labor on the project (interweaved with
-the main argument, as they are now, or as an appendix?), so I'm
-looking forward to your suggestions if you have them :)/
 
 ** Intro 
 *** Expand active reading to include affect
 
 This project explores digital annotation as a way to make solitary
 reading practices more social and engaging. I modified an existing
-annotation tool to use in my English courses at Hunter College. As any
-English undergraduate instructor of English knows, close reading
-skills do not come naturally to most readers, and have to be
-cultivated through repeated modeling and practice. Instructors must
-make visible the attention to language required in close reading, and
-demonstrate how to analyze language in depth, particularly the
-elaboration of meaning or significance. From my experience, I’ve found
-that using a digital annotation tool--particularly
-/Hypothes.is/[fn:1]--in the classroom is immensely helpful for
-modeling “active reading” strategies for students and following their
-progress as they complete the reading. However, while this tool encourages close and critical attention to
-language, it can also instill a limited and mechanized habit of
-responding to texts. In the textual comments, I see that students tend
-to replicate each other's response structure, turning whatever prompt
-or instructions I've given them into a rote analytical exercise. This
-makes me wonder, more broadly, about ways of using annotation that go
-beyond or offer alternatives to verbalized responses. 
+annotation tool, /Hypothes.is/[fn:1], to use in my English courses at
+Hunter College. I’ve found that using Hypothes.is in the classroom is
+immensely helpful for modeling “active reading” strategies for
+students and following their progress as they complete the
+reading. Lately, though, I wonder how digital annotation might expand
+to active reading practices to include affect. 
 
-How might a digital annotation tool short circuit this traditional
-habit of response to address more directly the emotional and
-instinctual reactions that occur during reading? How can digital
-annotation can activate reading as an embodied practice, connecting
-more directly to knowledge as feeling and affect, rather than
-knowledge as information that exists purely in a textual form? To
-answer these questions, I've modified my /Hypothes.is/ annotation tool
-to include a multi-color highlighter, rather than just yellow. The
-option for multiple colors, I hope, will expand "active reading" to
-include affect, recuperating the role of the body in reading. By
+*** Edtech tracks and standardizes learning
+Digital annotation in the classroom plays into conversations about the
+pervasive and insidious nature of many “edtech” (or Educational
+Technology) tools and platforms, especially those that quantify or
+“measure” student learning. Audrey Watters explains that collecting
+information on students not only makes them vulnerable to those who
+would profit from them economically, but also reduces them to data
+points and labels, such as “cheat” or “at risk” ("Ed Tech and
+Trump"). By reducing the differences among learners, data collection
+and analytics--which purport to create “personalized” learning
+experiences---actually work to standardize and automate
+education. 
+
+*** Tracking Neurons
+The work in English---reading, writing, literary analysis---is not
+immune to tracking and standardization. The threat of quantification
+has already marked its path to biological methods of surveillance, in
+little time. Only 10 years ago, Sharona Levy pointed out that, in
+English classes, “there is no mechanism to open [our student's] heads
+and see which neurons are firing while they are reading" (5). This
+year, primary schools in China were reported to roll out a "smart
+learning" program, where teachers track student learning through
+headbands that read brain activity. The results of their neuronal
+activity is visualized so the students can compete against each other:
+
+#+BEGIN_QUOTE
+The competition plays out in the form of a simulated rocket race on a
+screen at the front of the classroom. The headwear measures electric
+signals from neurons in the brain and translates that into an
+attention score using an algorithm. The more focused a student is, the
+higher the score gets, and the higher his or her rocket flies. If the
+score falls—meaning the student’s attention is waning—the rocket
+slows. Wang et al, "China’s Efforts"
+#+END_QUOTE
+
+This development of "smart learning" is part of a larger trend of
+surveillance including facial recognition technologies that that is
+much more pervasive and advanced in China than in the US, at least for
+the time being. China's example suggests where the the trajectory of
+edtech tools eventually lead---to mass neuronal surveillance.
+
+This makes me wonder, more broadly, about ways of using annotation in
+social contexts to offer alternatives to verbalized responses. How
+might a digital annotation tool short circuit this traditional habit
+of response to address more directly the emotional and instinctual
+reactions that occur during reading? How can digital annotation can
+activate reading as an embodied practice, connecting more directly to
+knowledge as feeling and affect, rather than knowledge as information
+that exists purely in a textual form? To answer these questions, I've
+modified my /Hypothes.is/ annotation tool to include a multi-color
+highlighter, rather than just yellow. The option for multiple colors,
+I hope, will expand recuperate the role of the body in reading. By
 prioritizing nonverbal or preverbal responses to recast reading as an
 embodied activity, this tool might encourage students to confront
 their more immediate responses, feelings, and gut reactions during the
-reading process. 
+reading process.
+
+*** partition
 
 Digital annotation engages in conversations about education,
 technology, and embodiment. It casts work already being done at the
@@ -67,51 +89,23 @@ technical project.
 
 3.1.19: Day One at the New Media Lab.
 
-Today Joe and I tried following the Client development instructions
-on the H docs. There were a bunch of issues, mostly to do with
-NPM. From what I can gather, Node requires you to install it globally,
-rather than just locally. As a result, every time we ran NPM we encountered a bunch of errors.
+Today Joe and I tried following the Client development instructions on
+the H docs. There were a bunch of issues, mostly to do with NPM. From
+what I can gather, Node requires you to install it globally, rather
+than just locally. As a result, every time we ran NPM we encountered a
+bunch of errors.
 
-It took us (mostly Joe) about an hour and a half attempting to install the client and browser-extension this sloooow way before we finally doubled back and started over with a non-problematic installation of node. This involved deleting the repos from Github and starting over, installing the dependencies (node) via the NVM (node version manager) rather than NPM. The instructions are below:
+It took us (mostly Joe) about an hour and a half attempting to install
+the client and browser-extension this sloooow way before we finally
+doubled back and started over with a non-problematic installation of
+node. This involved deleting the repos from Github and starting over,
+installing the dependencies (node) via the NVM (node version manager)
+rather than NPM. The instructions are below:
 
 [IMAGE OF DEVENV.PNG]
 
 
 ** Edtech
-*** Edtech tracks and standardizes learning
-This multi-color highlighter aims to resist the pervasive and
-insidious nature of many “edtech” (or Educational Technology) tools
-and platforms, especially those that quantify or “measure” student
-learning. Audrey Watters explains that collecting information on
-students not only makes them vulnerable to those who would profit from
-them economically, but also reduces them to data points and labels,
-such as “cheat” or “at risk” ("Ed Tech and Trump"). By reducing the
-differences among learners, data collection and analytics--which
-purport to create “personalized” learning experiences---actually work
-to standardize and automate education. Only 10 years ago, Sharona Levy
-pointed out that, in English classes, “there is no mechanism to open
-[our student's] heads and see which neurons are firing while they are
-reading" (5). Just last month, primary schools in China were reported
-to roll out a "smart learning" program, where teachers track student
-learning through headbands that read brain activity. The results of
-their neuronal activity is visualized so the students can compete
-against each other:
-
-#+BEGIN_QUOTE
-The competition plays out in the form of a simulated rocket race on a
-screen at the front of the classroom. The headwear measures electric
-signals from neurons in the brain and translates that into an
-attention score using an algorithm. The more focused a student is, the
-higher the score gets, and the higher his or her rocket flies. If the
-score falls—meaning the student’s attention is waning—the rocket
-slows. Wang et al, "China’s Efforts"
-#+END_QUOTE
-
-This development of "smart learning" is part of a larger trend of
-surveillance including facial recognition technologies that that is
-much more pervasive and advanced in China than in the US, at least for
-the time being. China's example suggests where the the
-trajectory of edtech tools eventually lead---to mass neuronal surveillance.
 
 *** Fired Up 
 
@@ -167,11 +161,19 @@ creating a confining structure for response?
 5.2.19: adder.html
 
 This is the short html file for the buttons, both the "Annotate" and
-"Highlight" button that pop up together once you make a text selection./ /I was able to make additional buttons (which didn't
-actually work when pressed) on the toolbar by duplicating the html within the file. It is important to note that on its own, my work in this file was never functional. In order for the buttons to work, I had to modify some javascript files that saved and passed the data from the user’s click.
+"Highlight" button that pop up together once you make a text
+selection./ /I was able to make additional buttons (which didn't
+actually work when pressed) on the toolbar by duplicating the html
+within the file. It is important to note that on its own, my work in
+this file was never functional. In order for the buttons to work, I
+had to modify some javascript files that saved and passed the data
+from the user’s click.
 
-The image shows two files on top of each other. In the background, there’s an image of my final modifications to the adder, with an additional drop down menu for colors under the “Highlight” button. In the foreground, there’s an image of the original HTML file that configured the adder.
-
+The image shows two files on top of each other. In the background,
+there’s an image of my final modifications to the adder, with an
+additional drop down menu for colors under the “Highlight” button. In
+the foreground, there’s an image of the original HTML file that
+configured the adder.
 
 *** Ponder
 
@@ -195,8 +197,8 @@ of this “microresponse” strategy is to condense student responses into
 a simple expression that others can most easily engage with:
 
 #+BEGIN_QUOTE
-To encourage students to “read each other,” Ponder limits responses
-to short phrases called sentiments that fall into three categories:
+To encourage students to “read each other,” Ponder limits responses to
+short phrases called sentiments that fall into three categories:
 comments about text comprehension (e.g., “I don’t get this”),
 critiques of the text (e.g., “This smells like hyperbole”), and
 emotional responses to the text (e.g., “Tsk, I disapprove.”) Blyth 209
@@ -206,12 +208,12 @@ Here, the pithy annotations allow interpretations to be shared and
 recognized among readers. These “microresponses” function analagously
 to emoticons or emojis, which are more exaggerated methods of
 condensing feeling into a expression that’s easily shared across
-social media. 
+social media.
 
-Despite the obvious social benefits of this tool, this
-prefabrication of responses seems constraining. By forcing the reader
-to choose between “clarification”, “analysis” or “emotion”, is the
-tool determining what kind of reaction someone might have? Or do these
+Despite the obvious social benefits of this tool, this prefabrication
+of responses seems constraining. By forcing the reader to choose
+between “clarification”, “analysis” or “emotion”, is the tool
+determining what kind of reaction someone might have? Or do these
 three tagging option (the cognitive, analytic, or emotional) function
 as an “enabling constraint”, that is, as a productive scaffolding that
 guides students toward thinking more deeply about their reading?
@@ -285,7 +287,7 @@ what I've said before regarding Jon Udell's script to "tag"
 annotations with color. My project is moving away from using verbal
 cues and engaging in verbal reactions. So having the color itself be
 the selection on the interface makes sense, because the person engages
-directly with that color. 
+directly with that color.
 
 The problem is that coloring the icons proved extremely time
 consuming. I wanted each icon to display the color indicated in the
@@ -299,9 +301,10 @@ inline CSS rule in adder.html to color the entire button. This is less
 elegant than I hoped, but at this point I need to move on. I'm going
 to leave it as is and start thinking about functionality.
 
-[[file:itp_final_images/dropdown1.png][the first iteration: a boring dropdown menu]]
-[[file:itp_final_images/dropdown2.png][the second iteration: a busy style]]
-[[file:itp_final_images/dropdown3.png][the third iteration: simple colored icons]]
+[[file:itp_final_images/dropdown1.png][the first iteration: a boring
+dropdown menu]] [[file:itp_final_images/dropdown2.png][the second
+iteration: a busy style]] [[file:itp_final_images/dropdown3.png][the
+third iteration: simple colored icons]]
 
 *** Quantifying Tension
 
@@ -318,6 +321,7 @@ threaded annotations, where students engage in debate and conversation
 about the text, serve as an indicator of tension in their
 reading. Instructors can then turn the class’s attention to exploring
 these moments more fully.
+
 
 ** Layering Emotions
 *** Layering Colors / misfittings
@@ -429,8 +433,8 @@ body of the organism, which are experienced as "somatic markers" such
 as rapid heartbeat or nausea, for example. These emotive experiences
 in the body float then up to an organism's awareness, whereby rapid
 heartbeat might be noticed as anxiety, and nausea as disgust. Damasio
-makes this key distinction between emotion as a bodily experience and feeling
-as mental awareness:
+makes this key distinction between emotion as a bodily experience and
+feeling as mental awareness:
 
 #+BEGIN_QUOTE
 Emotions are complex, largely automated programs of /actions/
@@ -464,9 +468,10 @@ should be used in pre-defined ways or more spontaneously), and, of
 course, my experience of using this in the classroom <--- most
 important/
 
+
 ** To Write: Color Theory toward a Queer Theory
 *** Prescribed or spontaneous colors?
-image: https://mymodernmet.com/color-mixing-chart/ 
+image: https://mymodernmet.com/color-mixing-chart/
 
 One of the challenges in developing the tool will be to think through
 the affordances of using color in pre-defined ways and using it more
@@ -475,7 +480,7 @@ spontaneously.
 Another will be to think through the choice of color palettes. Now, I
 have chosen primary colors of red-blue-yellow, with low opacities, to
 facilitate color layerings and the engendering of new colors. But
-there are other options for colors. 
+there are other options for colors.
 
 What if I chose color schemes that have other significations? For
 example, the Trans flag, which comes in pink, blue, and white. How
@@ -483,51 +488,83 @@ would such a color scheme affect reading?
 
 [image of trans flag].
 
-What about other schemes, collections of triadic colors? 
+What about other schemes, collections of triadic colors?
 
 *** What can queer theory add to DH methodologies? How can we enable “Touching without Touching”
+
+
+** To Read
+
+Panksepp's /Affective Neuroscience: the Foundations of Human and
+Animal Emotions/,
+
+Mark Turner, George Lakoff, /More than Cool Reason: A Field Guide to
+Poetic Metaphor/, 1989.
+- Metaphor is a cognitive, rather than literary, phenomenon.
+
+Ellen Spolsky, /Gaps in Nature: Literary Interpretation and the
+Modular Mind/, 1993.
+- explores theory of "modularity" (now widely displaced in favor of
+  connectivity) in brain development.
+  - "Ironically, that paradigm shift in the cognitive neurosciences
+    bolsters Spolsky's most valuable contribution to literary
+    studies---the way she transforms the gaps and fissures central to
+    deconstructive reading into tools for thinking about reading as a
+    constructive enterprise" (Tougaw, /Elusive Brain/, 30).
+
+Paul John Eakin, /Living Autobiographically: How we Create Identity in
+Narrative/ 2008.
+
 
 ** Works Cited
 
 Annotation Studio . Massachusetts Institute of Technology Hyperstudio.
 http://www.annotationstudio.org/
 
-Bean, John. Engaging Ideas: The Professor's Guide to Integrating Writing, Critical Thinking,
-and Active Learning in the Classroom . San Francisco: Jossey-Bass, 2001.
+Bean, John. Engaging Ideas: The Professor's Guide to Integrating
+Writing, Critical Thinking, and Active Learning in the Classroom . San
+Francisco: Jossey-Bass, 2001.
 
-Blyth, Carl S. “Exploring the Affordances of Digital Social 201 Reading for L2 Literacy: The
-Case of eComma” Digital Literacies in Foreign and Second Language . Ed. Janel Pettes
-Guikema and Lawrence Williams, CALICO Monograph Series, Vol. 12. 2014.
+Blyth, Carl S. “Exploring the Affordances of Digital Social 201
+Reading for L2 Literacy: The Case of eComma” Digital Literacies in
+Foreign and Second Language . Ed. Janel Pettes Guikema and Lawrence
+Williams, CALICO Monograph Series, Vol. 12. 2014.
 
 Damasio, Antonio. /Self Comes to Mind/. 2010.
 
-Hayles, N Katherine. How We Became Posthuman: Virtual Bodies in Cybernetics, Literature,
-and Informatics . University of Chicago Press, 2010. Print.
+Hayles, N Katherine. How We Became Posthuman: Virtual Bodies in
+Cybernetics, Literature, and Informatics . University of Chicago
+Press, 2010. Print.
 
 Hypothes.is . The Hypothes.is Project. https://web.hypothes.is/
 
 Lacuna Stories . The Poetic Media Lab, Standford
 University. https://www.lacunastories.com/
 
-Levy, Sharona A., “Reading the Reader”. /The Difference the Enquiry Makes/. ed. Randy Bass and
-Bret Enyon. Academic Commons, January 2009.
+Levy, Sharona A., “Reading the Reader”. /The Difference the Enquiry
+Makes/. ed. Randy Bass and Bret Enyon. Academic Commons, January 2009.
 
 Malabou, Catherine. /What Should We Do with Our Brain?/ 2008.
 
-Pitts-Taylor, Victoria. /The Brain's Body: Neuroscience and Corporeal Politics/. 2016.
+Pitts-Taylor, Victoria. /The Brain's Body: Neuroscience and Corporeal
+Politics/. 2016.
 
-Plutchik, R. "The Nature of Emotions." /American Scientist./ Archived from the original on July
-16, 2001.
+Plutchik, R. "The Nature of Emotions." /American Scientist./ Archived
+from the original on July 16, 2001.
 
 Ponder . Parlor Labs, Inc. https://www.ponder.co/about/
 
-Schneider, Emily, et al. “Making Reading Visible: Social Annotation with Lacuna in the
-Humanities Classroom.” The Journal of Interactive Technology and Pedagogy , 16 June
-2016
+Schneider, Emily, et al. “Making Reading Visible: Social Annotation
+with Lacuna in the Humanities Classroom.” The Journal of Interactive
+Technology and Pedagogy , 16 June 2016
 
-Tai, Yifan Wang, Shen Hong and Crystal. “China’s Efforts to Lead the Way in AI Start in Its Classrooms.” Wall Street Journal, 24 Oct. 2019. www.wsj.com, https://www.wsj.com/articles/chinas-efforts-to-lead-the-way-in-ai-start-in-its-classrooms-11571958181.
+Tai, Yifan Wang, Shen Hong and Crystal. “China’s Efforts to Lead the
+Way in AI Start in Its Classrooms.” Wall Street Journal, 24
+Oct. 2019. www.wsj.com,
+https://www.wsj.com/articles/chinas-efforts-to-lead-the-way-in-ai-start-in-its-classrooms-11571958181.
 
-Watters, Audrey. “ Ed-Tech and Trump .” Hack Education. February 2, 2017.
+Watters, Audrey. “ Ed-Tech and Trump .” Hack Education. February
+2, 2017.
 
 
 ** Resources
@@ -535,7 +572,8 @@ Watters, Audrey. “ Ed-Tech and Trump .” Hack Education. February 2, 2017.
 - [[https://github.com/hypothesis/frontend-toolkit/blob/master/docs/css-style-guide.md][CSS Guide]]
 - [[https://github.com/hypothesis/product-backlog/issues/198][Multiple Color issue on github]]
 - [[https://www.w3.org/TR/annotation-model/][W3C Annotation Standards]]
-- Levy, Sharona A., “Reading the Reader”. The Difference the Enquiry Makes . ed. Randy Bass and
+- Levy, Sharona A., “Reading the Reader”. The Difference the Enquiry
+  Makes . ed. Randy Bass and
 Bret Enyon. Academic Commons, January 2009.
 
 *** Meeting notes: 
@@ -562,6 +600,7 @@ Color
 - Read up on Color Theory. What are some color meanings?
 - What are the right colors? What do they mean?
 - Imagine what colors I would use to annotate a Woolf text
+
 
 * Footnotes
 
